--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
     "description": "testing CI",
     "version": "0.0.1",
     "private": true,
-    "scripts": {
-        
-    },
+    "scripts": {},
     "dependencies": {
         "express": "^4.16.4"
     },
     "devDependencies": {
-        "mocha":"^6.0.0",
+        "mocha": "^6.0.0",
         "supertest": "^3.4.2"
     }
 }
