--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "version": "0.0.1",
     "private": true,
     "scripts": {
-        "test": "./node_modules/.bin/mocha ./test/test.js"
+        "test": "./node_modules/.bin/mocha ./test/test.js --exit"
     },
     "dependencies": {
         "express": "^4.16.4"
